Project2/force-app/main/default/objects/Product2/fields/inStockQuantity__c.field-meta.xml
<CustomField>
    <fullName>inStockQuantity__c</fullName>
    <description>Quantity of Units in Stock</description>
    <label>in Stock Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>