Project2/force-app/main/default/objects/Product2/fields/ProductImg__c.field-meta.xml
<CustomField>
    <fullName>ProductImg__c</fullName>
    <label>Product Img</label>
    <length>50</length>
    <type>Text</type>
</CustomField>