Project2/force-app/main/default/objects/Product2/fields/Upcoming__c.field-meta.xml
<CustomField>
    <fullName>Upcoming__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Upcoming</label>
    <type>Checkbox</type>
</CustomField>