Project2/force-app/main/default/objects/Product2/recordTypes/Boss.recordType-meta.xml
<RecordType>
    <fullName>Boss</fullName>
    <active>true</active>
    <description>Record type for unit products</description>
    <label>Boss</label>
</RecordType>