Project2/force-app/main/default/objects/Product2/recordTypes/Boss_2.recordType-meta.xml
<RecordType>
    <fullName>Boss_2</fullName>
    <active>true</active>
    <description>Record type of units part 2</description>
    <label>Boss 2</label>
</RecordType>