Project2/force-app/main/default/objects/Product2/listViews/Upcoming.listView-meta.xml
<ListView>
    <fullName>Upcoming</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Upcoming__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Upcoming</label>
</ListView>